--- a/src/texte/2025-12-27-was-liebe.md
+++ b/src/texte/2025-12-27-was-liebe.md
@@ -4,7 +4,7 @@ tags: text
 title: Was Liebe
 date: 2025-12-27T12:54:00.000+01:00
 type: Gedicht
-excerpt: "für meine Schwestern Sybille und Heike. Im Prozess danach lerne ich,
+excerpt: "für meine Schwestern Sybille und Heike. Im Prozess danach lernte ich,
   dass ich loslassen darf und jeder Mensch seinen eigenen Weg finden muss. "
 ---
 ## Was Liebe
